--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ spacy==3.7.5
 tqdm==4.65.0
 transformers==4.42.3
 transliterate==1.10.2
-torch==2.3.1
+torch torchvision torchaudio
 openpyxl
 sentencepiece
 sacremoses
