--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 --index-url https://download.pytorch.org/whl/cu124
-torch==2.0.1+cu124
-torchvision==0.15.2+cu124
-torchaudio==0.15.2+cu124
+torch==2.5.1+cu124
+torchvision==0.20.1+cu124
+torchaudio== 2.5.1+cu124
 
 cutlet==0.4.0
 deep_translator==1.11.4
@@ -11,6 +11,6 @@ spacy==3.7.5
 tqdm==4.65.0
 transformers==4.42.3
 transliterate==1.10.2
-openpyxl==3.1.2
-sentencepiece==0.1.99
-sacremoses==0.0.53
+openpyxl
+sentencepiece
+sacremoses
