--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ torch==2.5.1+cu124
 torchvision==0.20.1+cu124
 torchaudio== 2.5.1+cu124
 
-deep_translator==1.11.4
-openai_whisper==20231106
-pandas==2.2.2
-spacy==3.7.5
-tqdm==4.65.0
-transformers==4.42.3
-transliterate==1.10.2
+deep_translator
+openai_whisper
+pandas
+spacy
+tqdm
+transformers
+transliterate
 openpyxl
 sentencepiece
 sacremoses
