--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
---extra-index-url https://download.pytorch.org/whl/cu124
-torch==2.5.1+cu124
-torchvision==2.5.1+cu124
-torchaudio==2.5.1+cu124
-
+torch
+torchvision
+torchaudio
 deep_translator
 openai_whisper
 pandas
