--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 --extra-index-url https://download.pytorch.org/whl/cu124
-torch
-torchvision
-torchaudio
+torch==2.5.1+cu124
+torchvision==0.20.1+cu124
+torchaudio== 2.5.1+cu124
 
 deep_translator
 openai_whisper
