--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,8 @@ jobs:
 
     - name: Build binary with PyInstaller
       run: |
-        pyinstaller --onefile ^
-          --add-data "materials/*;materials" ^
-          --add-data "$(python -c 'import whisper, os; print(os.path.join(os.path.dirname(whisper.__file__), \"assets\"))')/*;whisper/assets" ^
-          source/main.py  # Adjust the path to your script as necessary.
+        cd source
+        pyinstaller --onefile --add-data "materials/*;materials" --add-data "$(python -c 'import whisper, os; print(os.path.join(os.path.dirname(whisper.__file__), \"assets\"))')/*;whisper/assets" main.py
 
     - name: Upload binary as artifact
       uses: actions/upload-artifact@v4
