--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install pyinstaller
         pip install -r requirements.txt
-
-    - name: Clean temp files
-      run: |
-        Remove-Item -Path "$env:TEMP\*" -Force -Recurse
         
-    - name: Build binary with PyInstaller
+    - name: Remove temp and Build binary with PyInstaller
       run: |
         cd source
-        pyinstaller --onefile --add-data "materials/*;materials" --add-data "$(python -c 'import whisper, os; print(os.path.join(os.path.dirname(whisper.__file__), \"assets\"))')/*;whisper/assets" --exclude "DumpStack.log.tmp" main.py
+        Remove-Item -Path "$env:TEMP\*" -Force -Recurse
+        # Clean build and dist directories if they exist
+        Remove-Item -Path "dist" -Recurse -Force
+        Remove-Item -Path "build" -Recurse -Force
+        pyinstaller --clean --onefile --add-data "materials/*;materials" --add-data "$(python -c 'import whisper, os; print(os.path.join(os.path.dirname(whisper.__file__), \"assets\"))')/*;whisper/assets" main.py
 
     - name: Upload binary as artifact
       uses: actions/upload-artifact@v4
