--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,9 @@ jobs:
     - name: Remove temp and Build binary with PyInstaller
       run: |
         cd source
+        cd source
         Remove-Item -Path "$env:TEMP\*" -Force -Recurse
-        pyinstaller --clean --onefile --add-data "materials/*;materials" --add-data "$(python -c 'import whisper, os; print(os.path.join(os.path.dirname(whisper.__file__), \"assets\"))')/*;whisper/assets" main.py
+        pyinstaller --clean --onefile --add-data "materials/*;materials" --add-data "$(python -c 'import whisper, os; print(os.path.join(os.path.dirname(whisper.__file__), \"assets\"))')/*;whisper/assets" --exclude '\\DumpStack.log.tmp' main.py
 
     - name: Upload binary as artifact
       uses: actions/upload-artifact@v4
