--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       shell: bash
       run: |
         cd source
-        pyinstaller --clean --onefile --add-data "materials/*:materials" --specpath windows-distribution/ --distpath windows-distribution/dist --workpath windows-distribution/build --name tgt_windows main.py
+        pyinstaller --clean --onefile --add-data "../materials/*:materials" --specpath windows-distribution/ --distpath windows-distribution/dist --workpath windows-distribution/build --name tgt_windows main.py
 
     - name: Upload binary as artifact
       uses: actions/upload-artifact@v4
