--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,8 +51,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       shell: bash
       run: |
-        git config --global user.name "Your Name"
-        git config --global user.email "your-email@example.com"
+        git config --global user.name "Alejandra Camelo"
+        git config --global user.email "camelo.cruz@leibniz-zas.de"
         git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/OWNER/REPO.git
         git add ../tgt_windows.exe
         git commit -m "Add generated tgt_windows.exe binary [skip ci]"
