--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,12 +48,12 @@ jobs:
 
     - name: Push generated .exe to repository
       env:
-        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       shell: bash
       run: |
         git config --global user.name "Alejandra Camelo"
         git config --global user.email "camelo.cruz@leibniz-zas.de"
         git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/camelo-cruz/workflow.git
         git add windows-distribution/dist/tgt_windows.exe
-        git commit -m "Add generated tgt_windows.exe binary [skip ci]"
+        git commit -m "Add generated tgt_windows.exe binary [skip ci]" || echo "No changes to commit."
         git push origin main
