--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,26 @@ jobs:
           --distpath windows-distribution/dist \
           --workpath windows-distribution/build \
           --name tgt_windows source/main.py
+          
+    - name: Debug Secrets
+      shell: bash
+      env:
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      run: |
+        echo "Token length: ${#GITHUB_TOKEN}" # Should print the length of the token
+        echo "Masked Token: ${GITHUB_TOKEN}"  # Verify it's not empty but remains masked
+
+    - name: Test Push Command
+      env:
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      shell: bash
+      run: |
+        git config --global user.name "Alejandra Camelo"
+        git config --global user.email "camelo.cruz@leibniz-zas.de"
+        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/camelo-cruz/workflow.git
+        git fetch origin
+        git branch --set-upstream-to=origin/main main
+        git push origin main --dry-run
 
     - name: Push generated .exe to repository
       env:
