--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,12 @@ on:
       - "source/main.py"
 
 jobs:
-
   cleanup:
     runs-on: ubuntu-latest
     steps:
     - name: Install GitHub CLI
       run: |
         sudo apt-get install -y gh
-
-    - name: Authenticate GitHub CLI
-      env:
-        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      run: |
-        echo "${GITHUB_TOKEN}" | gh auth login --with-token
-
     - name: Delete old workflow runs
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -27,7 +19,10 @@ jobs:
         # Fetch the workflow runs
         WORKFLOW_ID=$(gh workflow list --json name,id -q '.[] | select(.name=="Automatic Workflow Distribution") | .id')
         echo "Workflow ID: ${WORKFLOW_ID}"
-
+        if [ -z "${WORKFLOW_ID}" ]; then
+          echo "Error: Unable to find workflow ID." >&2
+          exit 1
+        fi
         # Delete workflow runs older than the latest one
         gh run list --workflow $WORKFLOW_ID --json databaseId -q '.[1:] | .[].databaseId' | xargs -n 1 gh run delete --confirm
 
