--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,11 +80,14 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        # Add, commit, and push the changes
         git config --global user.email "camelo.cruz@leibniz-zas.de"
         git config --global user.name "Alejandra Camelo"
-        git add dist/
+        
+        git add windows-distribution/dist
         git commit -m "Add Windows distribution binaries"
+        
+        # Use the GitHub token to authenticate for the push
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
         git push --set-upstream origin windows-distribution
 
           
