--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.exe filter=lfs diff=lfs merge=lfs -text
 windows-distribution/** filter=lfs diff=lfs merge=lfs -text
+source/windows-distribution/dist/** filter=lfs diff=lfs merge=lfs -text
