--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,6 +69,7 @@ jobs:
           --distpath windows-distribution/dist \
           --workpath windows-distribution/build \
           --name tgt_windows main.py
+          --hidden-import numba
 
     - name: Upload binary as artifact
       uses: actions/upload-artifact@v4
