--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,4 +83,4 @@ jobs:
         RCLONE_CONFIG: ${{ secrets.RCLONE_CONFIG }}
       shell: bash
       run: |
-        rclone copy source/windows-distribution/dist onedrive:/MyAppFolder --progress
+        rclone copy source/windows-distribution/dist onedrive:/TGT_app --progress
