--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,7 +114,7 @@ jobs:
         pip install -U pyinstaller
 
     - name: Set environment variables
-      run: echo "API_KEY=${{ secrets.DEEPL_API_KEY }}" >> secrets.env
+      run: echo "API_KEY=${{ secrets.DEEPL_API_KEY }}" > secrets.env
         
     - name: Remove temp and Build binary with PyInstaller
       shell: bash
@@ -194,7 +194,7 @@ jobs:
         pip install -U pyinstaller
 
     - name: Set environment variables
-      run: echo "API_KEY=${{ secrets.DEEPL_API_KEY }}" >> secrets.env
+      run: echo "API_KEY=${{ secrets.DEEPL_API_KEY }}" > secrets.env
 
     - name: Build macOS binary with PyInstaller
       run: |
