--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pyannote.audio; sys_platform == "darwin"
 --extra-index-url https://download.pytorch.org/whl/cu124
 torch==2.5.1+cu124; sys_platform == "win32"
 torchvision==0.20.1+cu124; sys_platform == "win32"
+torchaudio==2.5.1+cu124; sys_platform == "win32"
 pytorch-lightning==1.5.4; sys_platform == "win32"
 pyannote.audio==0.0.1 ; sys_platform == "win32"
 
