--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,15 @@ pyannote.audio; sys_platform == "darwin"
 torch==2.5.1+cu124; sys_platform == "win32"
 torchvision==0.20.1+cu124; sys_platform == "win32"
 torchaudio==2.5.1+cu124; sys_platform == "win32"
-pytorch-lightning==1.5.4; sys_platform == "win32"
 pyannote.audio==0.0.1 ; sys_platform == "win32"
 
+pytorch-lightning
 Pillow
 python-dotenv
 deepl
 deep-translator
 openai_whisper
+whisperx
 pandas
 spacy
 tqdm
