--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,14 @@ torch; sys_platform == "darwin"
 torchvision; sys_platform == "darwin"
 torchaudio; sys_platform == "darwin"
 pytorch-lightning; sys_platform == "darwin"
-pyannote.audio; sys_platform == "darwin"
 
 # Windows dependencies (CUDA 10.2 build under CUDA 12.4 index)
 --extra-index-url https://download.pytorch.org/whl/cu124
 torch==2.5.1+cu124; sys_platform == "win32"
 torchvision==0.20.1+cu124; sys_platform == "win32"
 torchaudio==2.5.1+cu124; sys_platform == "win32"
-pyannote.audio==0.0.1 ; sys_platform == "win32"
 
+pyannote.audio
 pytorch-lightning
 Pillow
 python-dotenv
